[package]
name = "trading-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
raydium_amm_poc = { path = "../raydium_amm_poc"}
raydium_amm = { workspace = true }
anchor-lang = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
anyhow = "1.0.53"
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }