[package]
name = "trading-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
anchor-lang = { workspace = true }
anyhow = "1.0.53"
backoff = "0.4.0"
base64 = "0.13.0"
bincode = { version = "1.3.3" }
dotenv = "0.15.0"
raydium_amm_poc = { path = "../raydium_amm_poc" }
raydium_amm = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
yellowstone-grpc-client = "1.12.0+solana.1.16.17"
yellowstone-grpc-proto = "1.11.0+solana.1.16.17"
solana-transaction-status = "<1.17.0"