[package]
name = "raydium_amm_poc"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true }
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", default-features = false, features = [
    "client",
] }
raydium_amm = { workspace = true }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
solana-program = "<1.18.4"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
anyhow = "1.0.53"
safe-transmute = "0.11.2"
arrayref = "0.3.6"
serde_json = { version = "1.0.78" }
base64 = "0.13.0"
bincode = { version = "1.3.3" }
solana-transaction-status = "<1.17.0"
uint = "0.9.5"
num-derive = "0.3"
num-traits = "0.2.12"
thiserror = "1.0.20"
bytemuck = { version = "1.4.0" }
serde = { version = "1.0", features = ["derive"] }